# rust-mysql-full-stack

./: README.md
rust-mysql-be/: .env  Cargo.toml  info
rust-mysql-be/src/: main.rs
rust-mysql-fe/: Cargo.toml  index.html
rust-mysql-fe/src/: main.rs
